--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta charset="utf-8">
 
     <script src="node_modules/tracking/build/tracking-min.js"></script>
+    <script src="node_modules/tracking/build/data/face-min.js"></script>
     <script src="node_modules/dat.gui/build/dat.gui.min.js"></script>
 
     <style>
@@ -15,19 +16,25 @@
         left: -1000px;
         top: -1000px;
       }
+      #video {
+        position: absolute;
+        top: -1000px;
+      }
     </style>
   </head>
   <body>
-
-    <div class="demo-title"></div>
-
     <div class="canvas-container">
-      <canvas id="canvas" width="450" height="720"></canvas>
+      <video id="video" width="640" height="360" preload autoplay loop muted controls></video>
+      <canvas id="canvas" width="720" height="720"></canvas>
     </div>
 
     <script>
       window.onload = function() {
-        var imageFilenames = ['tarot00.jpg', 'tarot01.jpg', 'tarot02.jpg', 'tarot03.jpg'];
+        navigator.getUserMedia = navigator.getUserMedia ||
+          navigator.webkitGetUserMedia ||
+          navigator.mozGetUserMedia;
+
+        const imageFilenames = ['tarot00.jpg', 'tarot01.jpg', 'tarot02.jpg', 'tarot03.jpg'];
 
         var populateImages = function() {
           var container = document.getElementsByClassName('canvas-container')[0];
@@ -42,11 +49,12 @@
         }
         populateImages();
 
-        const width = 430;
-        const height = 660;
         const canvas = document.getElementById('canvas');
         const context = canvas.getContext('2d');
         const images = document.getElementsByClassName('image-template');
+        const video = document.getElementById('video');
+        const width = 430;
+        const height = 660;
         const corners = [];
         const descriptors = [];
 
@@ -78,6 +86,76 @@
           }
         }
         //debugCorners(0);
+
+        // TarotTracker
+        var TarotTracker = function() {
+          TarotTracker.base(this, 'constructor');
+        }
+        tracking.inherits(TarotTracker, tracking.Tracker);
+
+        TarotTracker.prototype.templateDescriptors_ = null;
+        TarotTracker.prototype.templateKeypoints_ = null;
+        TarotTracker.prototype.fastThreshold = 60;
+        TarotTracker.prototype.blur = 3;
+
+        TarotTracker.prototype.setTemplate = function() {
+          this.templateKeypoints_ = corners[0];
+          this.templateDescriptors_ = descriptors[0];
+        };
+
+        TarotTracker.prototype.track = function(pixels, width, height) {
+          var blur = tracking.Image.blur(pixels, width, height, this.blur);
+          var grayscale = tracking.Image.grayscale(blur, width, height);
+          var keypoints = tracking.Fast.findCorners(grayscale, width, height, this.fastThreshold);
+          var descriptors = tracking.Brief.getDescriptors(grayscale, width, keypoints);
+
+          this.emit('track', {
+            data: tracking.Brief.reciprocalMatch(this.templateKeypoints_, this.templateDescriptors_, keypoints, descriptors)
+          });
+        };
+
+        var tracker = new TarotTracker();
+        tracker.on('track', function(event) {
+
+          context.clearRect(0, 0, canvas.width, canvas.height);
+          context.drawImage(video, 0, 0, 640, 360);
+
+          // Sorts best matches by confidence
+          event.data.sort(function(a, b) {
+            return b.confidence - a.confidence;
+          });
+
+          // Plots matching points on frame
+          for (var i = 0; i < Math.min(100, event.data.length); i++) {
+            var template = event.data[i].keypoint1;
+            var frame = event.data[i].keypoint2;
+            context.fillStyle = '#f00';
+            context.fillRect(frame[0], frame[1], 3, 3);
+          }
+        });
+
+        const vidParams = {
+          width: 640,
+          height: 360
+        };
+
+        navigator.getUserMedia({video: vidParams}, function(stream) {
+          var mVideo = document.getElementById('video');
+          mVideo.srcObject = stream;
+          mVideo.onloadedmetadata = function(e) {
+            mVideo.play();
+          };
+        }, function(err) {
+          alert(err.name);
+          console.log("The following error occurred: " + err.name);
+        });
+
+        var trackerTask = tracking.track('#video', tracker, { camera: true });
+        trackerTask.stop();
+        document.getElementById('canvas').addEventListener('click', function() {
+          tracker.setTemplate();
+          trackerTask.run();
+        });
 
       }
     </script>
