--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html>
   <head>
 
-    <title>tracking.js - bounding box with camera</title>
+    <title>tracking.js - match patterns</title>
 
     <meta charset="utf-8">
 
     <script src="node_modules/tracking/build/tracking-min.js"></script>
-    <script src="node_modules/tracking/build/data/face-min.js"></script>
     <script src="node_modules/dat.gui/build/dat.gui.min.js"></script>
 
     <style>
@@ -37,10 +36,10 @@
         const imageFilenames = ['tarot00.jpg', 'tarot01.jpg', 'tarot02.jpg', 'tarot03.jpg'];
 
         var populateImages = function() {
-          var container = document.getElementsByClassName('canvas-container')[0];
+          const container = document.getElementsByClassName('canvas-container')[0];
 
-          for(var i=0; i<imageFilenames.length; i++) {
-            var image = document.createElement('img');
+          for(let i=0; i<imageFilenames.length; i++) {
+            const image = document.createElement('img');
             image.classList.add('image-template');
             image.setAttribute('id', imageFilenames[i].replace('.jpg', ''));
             image.setAttribute('src', 'imgs/' + imageFilenames[i]);
@@ -53,24 +52,26 @@
         const context = canvas.getContext('2d');
         const images = document.getElementsByClassName('image-template');
         const video = document.getElementById('video');
-        const width = 430;
-        const height = 660;
+        const templateWidth = 240;
+        const templateHeight = 368;
+        const videoWidth = 640;
+        const videoHeight = 360;
         const corners = [];
         const descriptors = [];
+        let isRunning = false;
 
         window.descriptorLength = 256;
-        window.matchesShown = 30;
-        window.blurRadius = 3;
+        window.blurRadius = 1.01;
 
         var getCornerDescriptors = function() {
           tracking.Brief.N = window.descriptorLength;
 
-          for(var i=0; i<images.length; i++) {
-            context.drawImage(images[i], 0, 0, width, height);
-            var imageData = context.getImageData(0, 0, width, height);
-            var gray = tracking.Image.grayscale(tracking.Image.blur(imageData.data, width, height, blurRadius), width, height);
-            var mCorners = tracking.Fast.findCorners(gray, width, height);
-            var mDescriptors = tracking.Brief.getDescriptors(gray, width, mCorners);
+          for(let i=0; i<images.length; i++) {
+            context.drawImage(images[i], 0, 0, templateWidth, templateHeight);
+            const imageData = context.getImageData(0, 0, templateWidth, templateHeight);
+            const gray = tracking.Image.grayscale(tracking.Image.blur(imageData.data, templateWidth, templateHeight, window.blurRadius), templateWidth, templateHeight);
+            const mCorners = tracking.Fast.findCorners(gray, templateWidth, templateHeight);
+            const mDescriptors = tracking.Brief.getDescriptors(gray, templateWidth, mCorners);
             corners.push(mCorners);
             descriptors.push(mDescriptors);
             context.clearRect(0, 0, canvas.width, canvas.height);
@@ -78,16 +79,19 @@
         }
         getCornerDescriptors();
 
-        var debugCorners = function(imageIndex) {
-          context.drawImage(images[imageIndex], 0, 0, width, height);
-          for(var i=0; i<corners[imageIndex].length; i+=2) {
-            context.fillStyle = '#f00';
-            context.fillRect(corners[imageIndex][i], corners[imageIndex][i + 1], 3, 3);
+        var debugCorners = function() {
+          for(let j=0; j<images.length; j++) {
+            context.drawImage(images[j],
+                              j*templateWidth, 0, templateWidth, templateHeight);
+            for(let i=0; i<corners[j].length; i+=2) {
+              context.fillStyle = '#f00';
+              context.fillRect(corners[j][i] + j*templateWidth,
+                               corners[j][i + 1], 3, 3);
+            }
           }
         }
-        //debugCorners(0);
+        debugCorners();
 
-        // TarotTracker
         var TarotTracker = function() {
           TarotTracker.base(this, 'constructor');
         }
@@ -95,48 +99,76 @@
 
         TarotTracker.prototype.templateDescriptors_ = null;
         TarotTracker.prototype.templateKeypoints_ = null;
-        TarotTracker.prototype.fastThreshold = 60;
-        TarotTracker.prototype.blur = 3;
+        TarotTracker.prototype.fastThreshold = 80;
+        TarotTracker.prototype.blur = window.blurRadius;
 
         TarotTracker.prototype.setTemplate = function() {
           this.templateKeypoints_ = corners[0];
           this.templateDescriptors_ = descriptors[0];
         };
 
-        TarotTracker.prototype.track = function(pixels, width, height) {
-          var blur = tracking.Image.blur(pixels, width, height, this.blur);
-          var grayscale = tracking.Image.grayscale(blur, width, height);
-          var keypoints = tracking.Fast.findCorners(grayscale, width, height, this.fastThreshold);
-          var descriptors = tracking.Brief.getDescriptors(grayscale, width, keypoints);
+        TarotTracker.prototype.track = function(pixels, mWidth, mHeight) {
+          const frameBlur = tracking.Image.blur(pixels, mWidth, mHeight, window.blurRadius);
+          const frameGrayscale = tracking.Image.grayscale(frameBlur, mWidth, mHeight);
+          const frameKeypoints = tracking.Fast.findCorners(frameGrayscale, mWidth, mHeight, this.fastThreshold);
+          const frameDescriptors = tracking.Brief.getDescriptors(frameGrayscale, mWidth, frameKeypoints);
 
+          const matchResults = [];
+          for(let i=0; i<descriptors.length; i++) {
+            const recMatch = tracking.Brief.reciprocalMatch(corners[i], descriptors[i],
+                                                            frameKeypoints, frameDescriptors);
+            recMatch.sort(function(a, b) {
+              return b.confidence - a.confidence;
+            });
+
+            let confidenceSum = 0;
+            for(let j=0; j<recMatch.length; j++){
+              confidenceSum += recMatch[j].confidence;
+            }
+
+            if(recMatch.length > 0){
+              matchResults.push({
+                match: recMatch,
+                length: recMatch.length,
+                confidence: confidenceSum/recMatch.length
+              });
+            } else{
+              matchResults.push({
+                match: [],
+                length: 0,
+                confidence: 0
+              });
+            }
+          }
+          console.log(matchResults);
+
+          // TODO: return best match
+          // best match := highest confidence AND also highest number of points
+          // OR
+          // best match := highest confidence larger than (next-highest + ε)
           this.emit('track', {
-            data: tracking.Brief.reciprocalMatch(this.templateKeypoints_, this.templateDescriptors_, keypoints, descriptors)
+            data: matchResults[0].match
           });
         };
 
-        var tracker = new TarotTracker();
+        const tracker = new TarotTracker();
         tracker.on('track', function(event) {
 
           context.clearRect(0, 0, canvas.width, canvas.height);
-          context.drawImage(video, 0, 0, 640, 360);
+          context.drawImage(video, 0, 0, videoWidth, videoHeight);
 
-          // Sorts best matches by confidence
-          event.data.sort(function(a, b) {
-            return b.confidence - a.confidence;
-          });
-
-          // Plots matching points on frame
-          for (var i = 0; i < Math.min(100, event.data.length); i++) {
-            var template = event.data[i].keypoint1;
-            var frame = event.data[i].keypoint2;
+          // Plots matching points on canvas
+          for (let i = 0; i < Math.min(100, event.data.length); i++) {
+            const template = event.data[i].keypoint1;
+            const frame = event.data[i].keypoint2;
             context.fillStyle = '#f00';
             context.fillRect(frame[0], frame[1], 3, 3);
           }
         });
 
         const vidParams = {
-          width: 640,
-          height: 360
+          width: videoWidth,
+          height: videoHeight
         };
 
         navigator.getUserMedia({video: vidParams}, function(stream) {
@@ -147,16 +179,21 @@
           };
         }, function(err) {
           alert(err.name);
-          console.log("The following error occurred: " + err.name);
+          console.log("The following error occurred in getUserMedia: " + err.name);
         });
 
-        var trackerTask = tracking.track('#video', tracker, { camera: true });
+        const trackerTask = tracking.track('#video', tracker, { camera: true });
         trackerTask.stop();
         document.getElementById('canvas').addEventListener('click', function() {
-          tracker.setTemplate();
-          trackerTask.run();
+          if(isRunning) {
+            trackerTask.stop();
+            isRunning = false;
+          } else {
+            tracker.setTemplate();
+            trackerTask.run();
+            isRunning = true;
+          }
         });
-
       }
     </script>
 
