mobile dimension hack

--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
         const templateHeight = 368;
         const videoWidth = 640;
         const videoHeight = 360;
+        const canvasWidth = (window.innerWidth > window.innerHeight) ? videoWidth : window.innerWidth;
+        const canvasHeight = (window.innerWidth > window.innerHeight) ? videoHeight : window.innerHeight;
         const OBJECT_CONFIDENCE_EPSILON = 0.05;
         const MINIMUM_CORNER_MATCH_COUNT = 10;
         const corners = [];
@@ -84,8 +86,8 @@
         window.descriptorLength = 256;
         window.blurRadius = 1.01;
 
-        canvas.setAttribute("width", videoWidth + "px");
-        canvas.setAttribute("height", videoHeight + "px");
+        canvas.setAttribute("width", canvasWidth + "px");
+        canvas.setAttribute("height", canvasHeight + "px");
 
         var getCornerDescriptors = function() {
           tracking.Brief.N = window.descriptorLength;
@@ -177,15 +179,21 @@
         const tracker = new TarotTracker();
         tracker.on('track', function(event) {
 
+          const heightRatio = canvasHeight / videoHeight;
+          const newVideoWidth = heightRatio * videoWidth;
+
           context.clearRect(0, 0, canvas.width, canvas.height);
-          context.drawImage(video, 0, 0, videoWidth, videoHeight);
+          context.drawImage(video, (canvasWidth - newVideoWidth) / 2, 0,
+                            newVideoWidth, heightRatio * videoHeight);
 
           // Plots matching points on canvas
           for (let i = 0; i < Math.min(64, event.data.match.length); i++) {
             const template = event.data.match[i].keypoint1;
             const frame = event.data.match[i].keypoint2;
+            const newX = heightRatio * frame[0] + (canvasWidth - newVideoWidth) / 2;
+            const newY = heightRatio * frame[1];
             context.fillStyle = '#f00';
-            context.fillRect(frame[0], frame[1], 3, 3);
+            context.fillRect(newX, newY, 3, 3);
           }
 
           if(event.data.match.length > 0) {
