--- a/index.html
+++ b/index.html
@@ -188,8 +188,8 @@
         });
 
         const vidParams = {
-          width: videoWidth,
-          height: videoHeight,
+          //width: videoWidth,
+          //height: videoHeight,
           facingMode: 'environment'
         };
 
