prints cam info on cam.html

--- a/cam.html
+++ b/cam.html
@@ -28,6 +28,7 @@
 
       <video muted autoplay></video>
 
+      <div id="camera-settings"></div>
       <script src="js/cam.js"></script>
     </div>
   </body>
