--- a/index.html
+++ b/index.html
@@ -50,7 +50,10 @@
           { imageFile: 'tarot08.jpg', profile: 'forgotten'},
           { imageFile: 'tarot09.jpg', profile: 'service dog'},
           { imageFile: 'tarot10.jpg', profile: 'catalyst'},
-          { imageFile: 'tarot11.jpg', profile: 'backstabber'}
+          { imageFile: 'tarot11.jpg', profile: 'backstabber'},
+          { imageFile: 'tarot12.jpg', profile: 'acesso'},
+          { imageFile: 'tarot13.jpg', profile: 'escala'},
+          { imageFile: 'tarot14.jpg', profile: 'uso'}
         ];
 
         var populateImages = function() {
